// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WalletButton renders a connected wallet button 1`] = `
<div
  class="tc__walletButton__connected"
>
  <button
    class="tc__btn tc__walletButton__connected-network"
    data-selected="false"
    type="button"
  >
    <svg
      class="tc__logo tc__logo-token-ETH"
      fill="none"
      height="24"
      viewBox="0 0 40 40"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M20 40C31.0457 40 40 31.0457 40 20C40 8.9543 31.0457 0 20 0C8.9543 0 0 8.9543 0 20C0 31.0457 8.9543 40 20 40Z"
        fill="#627EEA"
      />
      <path
        clip-rule="evenodd"
        d="M11.25 20.275L20.6225 5V16.0875L11.25 20.275ZM20.6225 27.4588V34.9938L11.25 22.0201L20.6225 27.4588Z"
        fill="white"
        fill-rule="evenodd"
      />
      <path
        d="M20.625 25.7163L29.9962 20.275L20.625 16.09V25.7163Z"
        fill="white"
        fill-opacity="0.2"
      />
      <path
        clip-rule="evenodd"
        d="M20.625 5V16.0875L29.9962 20.275L20.625 5ZM20.625 27.4573V34.991L30.0025 22.0173L20.625 27.4573ZM20.6225 25.7163L11.25 20.275L20.6225 16.09V25.7163Z"
        fill="white"
        fill-opacity="0.6"
        fill-rule="evenodd"
      />
    </svg>
  </button>
  <button
    class="tc__btn tc__walletButton__connected-wallet"
    data-selected="false"
    type="button"
  >
    <div
      class="tc__walletButton__connected-wallet-logo"
    >
      <canvas
        class="identicon"
        height="24"
        style="width: 24px; height: 24px;"
        width="24"
      />
    </div>
    <div
      class="tc__walletButton__connected-wallet-info"
    >
      <div
        style="font-style: normal; font-size: 10px; line-height: 16px; color: rgb(34, 34, 34); font-weight: 500; font-family: 'Azeret Mono', monospace; opacity: 1;"
      >
        0xAFE0...5F5de
      </div>
      <div
        class="tc__walletButton__connected-wallet-info-balance"
      >
        <div
          style="font-style: normal; font-size: 12px; line-height: 16px; color: rgb(34, 34, 34); font-weight: 700; font-family: 'Azeret Mono', monospace; opacity: 1;"
        >
          12.34
        </div>
         
        <div
          style="font-style: normal; font-size: 12px; line-height: 16px; color: rgb(34, 34, 34); font-weight: 400; font-family: 'DM Sans', sans-serif; opacity: 1;"
        >
          ETH
        </div>
      </div>
    </div>
  </button>
</div>
`;

exports[`WalletButton renders a connected wallet button to an unsupported network 1`] = `
<div
  class="tc__walletButton__connected"
>
  <button
    class="tc__btn tc__walletButton__connected-network"
    data-selected="false"
    type="button"
  >
    <svg
      class="tc__icon tc__icon-exclamation-error"
      fill="none"
      height="20"
      viewBox="0 0 16 16"
      width="20"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M7.04566 1.54327C7.46762 0.81891 8.53238 0.81891 8.95434 1.54327L15.8536 13.3868C16.2723 14.1056 15.7432 15 14.8992 15H1.10078C0.256824 15 -0.272275 14.1056 0.146446 13.3868L7.04566 1.54327Z"
        fill="#FF0F0F"
      />
      <path
        d="M7 6.00314V8.98597C7 9.54015 7.44767 9.9894 7.9999 9.9894C8.55221 9.9894 8.99991 9.54003 8.9998 8.98577L8.9992 6.00293C8.99909 5.45985 8.56833 5.01548 8.02737 5.0004C7.46465 4.9847 7 5.43821 7 6.00314Z"
        fill="white"
      />
      <path
        d="M8.9995 11.997C8.99978 11.4427 8.55209 10.9929 7.99975 10.9929C7.4476 10.9929 7 11.4424 7 11.9965C7 12.5506 7.4476 13 7.99975 13C8.5517 13 8.99922 12.5509 8.9995 11.997Z"
        fill="white"
      />
    </svg>
  </button>
  <button
    class="tc__btn tc__walletButton__connected-wallet"
    data-selected="false"
    disabled=""
    type="button"
  >
    <div
      style="font-style: normal; font-size: 16px; line-height: 24px; color: rgb(34, 34, 34); font-weight: 700; font-family: 'DM Sans', sans-serif; opacity: 1;"
    >
      Unsupported
    </div>
  </button>
</div>
`;

exports[`WalletButton renders a disconnected wallet button 1`] = `
<button
  class="tc__btn tc__walletButton__disconnected"
  data-selected="false"
  type="button"
>
  <div
    style="font-style: normal; font-size: 16px; line-height: 24px; color: rgb(34, 34, 34); font-weight: 700; font-family: 'DM Sans', sans-serif; opacity: 1;"
  >
    Connect Wallet
  </div>
</button>
`;
